--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <link id="tema" href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -43,7 +44,7 @@
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="assets/js/custom.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
